--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -44,6 +44,19 @@ dependencies:
   dio: ^5.9.0
   google_fonts: ^6.3.2
   smooth_page_indicator: ^1.2.1
+  flutter_animate: ^4.5.2
+  font_awesome_flutter: ^10.12.0
+  cached_network_image: ^3.3.1
+  flutter_svg: ^2.0.10
+  gap: ^3.0.1
+  lottie: ^3.1.2
+  permission_handler: ^11.3.1
+  url_launcher: ^6.3.1
+  flutter_launcher_icons: ^0.14.3
+  connectivity_plus: ^6.1.1
+  logger: ^2.0.2
+  device_preview: ^1.2.0
+  flutter_native_splash: ^2.3.9
 
 dev_dependencies:
   flutter_test:
